--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # site settings
-title: Forty
-subtitle: by HTML5 UP
-email: youremailaddress@gmail.com
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
+title: Eagle Eye Vision
+subtitle: making innovative apps
+email: phdtushita@gmail.com
+description: At Eagle Eye Vision, our stories metamorphize in beautiful forms –<br /> creative games, productive applications and innovative solutions!
 baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
-street_address: 1234 Somewhere Road
-city: Nashville
-state: TN
-zip_code: 55555
-country: United States of America
-phone: (716) 555-5555
+street_address: 103 Kangoeroestraat
+city: Breda
+state: Nord Brabant
+zip_code: 4817GA
+country: Netherlands
+phone: (31) 0658731829
 
 # homepage tiles
 tiles-source: pages # accepts "posts" or "pages"
