--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: At Eagle Eye Vision, our stories metamorphize in beautiful forms â€
 baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
-street_address: 103 Kangoeroestraat
+#street_address: 103 Kangoeroestraat
 city: Breda
 state: Nord Brabant
 zip_code: 4817GA
@@ -22,13 +22,13 @@ tiles-count: 6
 # Icons are not shown if value is empty
 # You need to restart jekyll for changes to have an effect
 socials:
-  GitHub: https://github.com/andrewbanchich
-  GitLab:
-  Google-Plus: https://plus.google.com/u/0/+AndrewBanchich
-  Instagram:
-  LinkedIn: https://www.linkedin.com/in/andrew-banchich-a4ba1195
-  Twitter: https://twitter.com/andrewbanchich
-  Facebook:
+  #GitHub: https://github.com/andrewbanchich
+  #GitLab:
+  #Google-Plus: https://plus.google.com/u/0/+AndrewBanchich
+  #Instagram:
+  LinkedIn: https://www.linkedin.com/in/tushita-sarkar-12728619/
+  #Twitter: https://twitter.com/andrewbanchich
+  #Facebook:
   Slack:
 
 # build settings
