mission text and image bg

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ author:
 #street_address: 103 Kangoeroestraat
 city: Breda
 state: Nord Brabant
-zip_code: 4817GA
+#zip_code: 4817GA
 country: Netherlands
 phone: (31) 0658731829
 
