--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # site settings
 title: Eagle Eye Vision
 subtitle: making innovative apps
-email: phdtushita@gmail.com
+email: TushitaSarkar@eagleEyeVision.nl
 description: At Eagle Eye Vision, our stories metamorphize in beautiful forms –<br /> creative games, productive applications and innovative solutions!
 baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
